# arete

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCS.md  Makefile  README.md  main.py  opencode.json  pyproject.toml
.github/workflows/: checks.yml
arete/: enhance.py  info.py  settings.py  train.py  validate.py
arete/baselines/: __init__.py  dsp.py
arete/data/: __init__.py  dataset.py
arete/losses/: __init__.py  combined.py
arete/models/: __init__.py  ema.py  unet_stft.py  unet_waveform.py
arete/services/: __init__.py  degradation.py  enhancer.py  trainer.py  validation.py
configs/: default.yaml
scripts/: prepare_dataset.py
src/audio_upscaler/: __init__.py  cli.py
src/audio_upscaler/baselines/: __init__.py  dsp.py
src/audio_upscaler/data/: __init__.py  dataset.py  degradations.py
src/audio_upscaler/inference/: __init__.py  enhancer.py
src/audio_upscaler/losses/: __init__.py  combined.py
src/audio_upscaler/models/: __init__.py  ema.py  unet_stft.py  unet_waveform.py
src/audio_upscaler/training/: __init__.py  trainer.py
tests/: test_baselines.py  test_cli.py  test_dataset.py  test_degradations.py  test_enhancer.py  test_losses.py  test_models.py  test_trainer.py
wiki/: 2026-06-25-add-project-tests.md  2026-06-26-initial-setup-fixes.md  2026-07-07-project-restructure-src-to-arete.md  2026-07-07-settings-grouped-logging-copied.md  2026-07-08-dataset-trainer-resilience-fixes.md  RELEASE_NOTES.md
