[project]
name = "arete"
version = "0.1.0"
description = "Audio restoration / bandwidth extension model (DSEE-like) for music"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alexander Chaika" }]

dependencies = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "torchcodec>=0.13.0",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "auraloss>=0.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "tensorboard>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.6.0",
    "bandit>=1.9.4",
]
demucs = [
    "demucs>=4.0.0",
]

[project.scripts]
audio-upscaler = "audio_upscaler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_upscaler"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "INP",  # flake8-no-pep420
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S311",   # pseudo-random generators (ML data aug, not crypto)
    "S603",   # subprocess without shell=True
]
unfixable = [
    "B",  # bugbear may suggest unsafe refactors
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F405"]
"tests/*" = ["S", "N802", "N815"]
"src/audio_upscaler/**" = ["N812"]  # F, T, taf aliases are PyTorch idioms

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --color=yes"
log_cli = true
log_cli_format = "%(levelname)s %(asctime)s %(message)s"
norecursedirs = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.bandit]
exclude_dirs = ["tests/"]
skips = ["B101", "B308", "B311", "B703"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.6.0",
    "bandit>=1.9.4",
]
