[project]
name = "arete"
version = "0.2.0"
readme = "README.md"
description = "Audio restoration / bandwidth extension model (DSEE-like) for music"
requires-python = ">=3.13"
license = { text = "GNU Affero General Public License v3.0" }
authors = [{ name = "Alexander Chaika" }]

dependencies = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "torchcodec>=0.13.0",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "auraloss>=0.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "tensorboard>=2.17.0",
]

[project.optional-dependencies]
demucs = [
    "demucs>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arete"]

[tool.ty.src]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = []

[tool.ruff.lint]
select = [
    "E",
    "F",
    "N",
    "UP",
    "B",
    "S",
    "BLE",
    "A",
    "I",
    "INP",
    "RUF",
]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
ignore = [
    "DJ001",
    "ERA001",
    "W191",
    "E501",
    "E111",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "S311",
    "S603",
    "RUF100",
    "RUF012",
    "N806",
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "arete", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
"arete" = ["arete"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F405"]
"**/{tests,docs}/*" = ["E402", "F403", "F405", "S", "N802", "N815"]
"**/*test*.py" = ["E402", "F403", "F405", "S", "N802"]
"arete/**" = ["N812"]

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(levelname)s %(asctime)s %(message)s"
asyncio_mode = "auto"
addopts = '-p no:warnings --color=yes -v --tb=short'
norecursedirs = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.bandit]
exclude_dirs = [
    "tests/"
]
skips = ["B101", "B308", "B311", "B404", "B603", "B703"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.6.0",
    "bandit>=1.9.4",
    "ty>=0.0.51",
]
